--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-js-counter": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
